--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,298 @@
-@import "tailwindcss/base";
-@import "tailwindcss/components";
-@import "tailwindcss/utilities";
+/* Application colors and designs */
+/*Shadows and borders*/
+/*Font colors*/
+/* Application fonts */
+body {
+  margin: 0;
+  min-width: 250px;
+  overflow-x: hidden;
+}
+
+* {
+  box-sizing: border-box;
+  font-family: "Star Jedi", sans-serif;
+  color: #595959;
+}
+
+/*Login screen design*/
+.login {
+  background-image: url(./components/asssets/images/wp6477214-minimal-star-wars-wallpapers.jpg);
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.login .login-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  background-color: #ffffff;
+  padding: 40px 60px;
+  border-radius: 10px;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+}
+.login .login-wrapper .logo {
+  font-family: "Unica One", cursive;
+  font-size: 2.5em;
+  font-weight: 800;
+  color: #000000;
+}
+.login .login-wrapper .title {
+  font-family: "Unica One", cursive;
+  font-size: 2em;
+  font-weight: 800;
+  color: #fca311;
+  margin-bottom: 10px;
+}
+.login .login-wrapper .register-text {
+  font-size: 0.9em;
+}
+.login .login-wrapper form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  width: 90%;
+}
+.login .login-wrapper form input {
+  padding: 10px 10px 1px 10px;
+  border: none;
+  border-bottom: 1px solid rgba(235, 235, 235, 0.3215686275);
+  font-size: 1em;
+  outline: none;
+}
+.login .login-wrapper form input::-moz-placeholder {
+  color: #8f8f8f;
+  font-size: 1em;
+}
+.login .login-wrapper form input::placeholder {
+  color: #8f8f8f;
+  font-size: 1em;
+}
+.login .login-wrapper form .error-message {
+  font-size: 0.8em;
+  font-weight: 600;
+  color: #fca311;
+}
+.login .login-wrapper form .login-button {
+  padding: 10px;
+  margin-top: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #000000;
+  font-size: 1.5em;
+  font-family: "Unica One", cursive;
+  color: #ffffff;
+  font-weight: 600;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+}
+.login .login-wrapper form .login-button:active {
+  transform: translateY(5px);
+}
+
+/*Chat screen design */
+.chat {
+  background-image: url(./components/asssets/images/wp6477214-minimal-star-wars-wallpapers.jpg);
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.chat .chat-wrapper {
+  border-radius: 10px;
+  width: 70%;
+  height: 80%;
+  display: flex;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+  overflow: hidden;
+  /*Left side*/
+  /*Right side*/
+}
+.chat .chat-wrapper .sidebar {
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  background-color: #fca311;
+}
+.chat .chat-wrapper .sidebar .logo {
+  display: flex;
+  background-color: #000000;
+  height: 10%;
+  padding: 10px;
+  padding-left: 20px;
+  gap: 10px;
+  align-items: center;
+}
+.chat .chat-wrapper .sidebar .logo .logo-text {
+  color: #ffffff;
+  font-family: "Unica One", cursive;
+  font-size: 1.5em;
+}
+.chat .chat-wrapper .sidebar .active-users {
+  height: 90%;
+  padding: 10px;
+  background-color: #fca311;
+  gap: 10px;
+}
+.chat .chat-wrapper .sidebar .active-users .users-title {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  height: 10%;
+  padding: 10px;
+  color: #ffffff;
+  font-family: "Unica One", cursive;
+  font-size: 1.2em;
+  border-bottom: 1px solid rgba(235, 235, 235, 0.3215686275);
+}
+.chat .chat-wrapper .sidebar .active-users .users-title .online-circle {
+  width: 16px;
+  height: 16px;
+  background-color: #63eb94;
+  border-radius: 50%;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+}
+.chat .chat-wrapper .sidebar .active-users .member {
+  margin-top: 10px;
+  height: 10%;
+  padding: 10px;
+  background-color: transparent;
+  gap: 10px;
+  border-radius: 10px;
+}
+.chat .chat-wrapper .sidebar .active-users .member:hover {
+  background-color: rgba(87, 88, 88, 0.5803921569);
+}
+.chat .chat-wrapper .sidebar .active-users .member .username {
+  font-family: "Nanum Pen Script", cursive;
+  color: #ffffff;
+  font-size: 1.8em;
+}
+.chat .chat-wrapper .container-right {
+  width: 70%;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  /*Messages field*/
+  /*Send line and button bellow*/
+}
+.chat .chat-wrapper .container-right .header {
+  display: flex;
+  background-color: #e5e5e5;
+  height: 10%;
+  padding: 20px;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+}
+.chat .chat-wrapper .container-right .header .header-title {
+  font-family: "Nanum Pen Script", cursive;
+  font-size: 1.8em;
+  color: #000000;
+  font-weight: 600;
+}
+.chat .chat-wrapper .container-right .header button {
+  background-color: #000000;
+  color: #ffffff;
+  border: none;
+  padding: 10px;
+  border-radius: 3px;
+  font-size: 1em;
+  cursor: pointer;
+  font-family: "Unica One", cursive;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+  width: 80px;
+}
+.chat .chat-wrapper .container-right .header button:active {
+  transform: translateY(5px);
+}
+.chat .chat-wrapper .container-right .messages {
+  height: 80%;
+  background-color: #494949;
+  width: 100%;
+  padding: 10px;
+  overflow-y: auto;
+}
+.chat .chat-wrapper .container-right .messages .chat-bubble {
+  gap: 10px;
+}
+.chat .chat-wrapper .container-right .messages ul {
+  list-style-type: none;
+  padding-left: 0;
+  width: 100%;
+}
+.chat .chat-wrapper .container-right .messages ul li {
+  width: -moz-fit-content;
+  width: fit-content;
+  min-width: 150px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  font-size: 1em;
+  border-radius: 10px;
+  margin: 10px;
+}
+.chat .chat-wrapper .container-right .messages ul li span.timestamp {
+  font-size: 0.7em;
+  font-family: "Unica One", cursive;
+}
+.chat .chat-wrapper .container-right .messages ul li span.chat-username {
+  width: -moz-fit-content;
+  width: fit-content;
+  margin-left: auto;
+  font-size: 1.4em;
+  font-family: "Nanum Pen Script", cursive;
+  font-weight: 500;
+}
+.chat .chat-wrapper .container-right .messages ul li.my-message {
+  margin-left: auto;
+  background: #14213d;
+  border-radius: 10px 0px 10px 10px;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+}
+.chat .chat-wrapper .container-right .messages ul li.others-message {
+  background: #ffffff;
+  border-radius: 0px 10px 10px 10px;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+}
+.chat .chat-wrapper .container-right .messages ul li.enter-exit {
+  margin: 10px auto;
+  background: #2f00ff;
+  padding: 10px;
+  align-items: center;
+  border-radius: 10px 10px 10px 10px;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+}
+.chat .chat-wrapper .container-right .input {
+  height: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px;
+  gap: 10px;
+  width: 100%;
+}
+.chat .chat-wrapper .container-right .input input {
+  border: none;
+  font-size: 1em;
+  outline: none;
+  width: 80%;
+}
+.chat .chat-wrapper .container-right .input button {
+  background-color: #000000;
+  color: #ffffff;
+  border: none;
+  padding: 10px;
+  border-radius: 3px;
+  font-size: 1em;
+  cursor: pointer;
+  font-family: "Unica One", cursive;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+  width: 80px;
+}
+.chat .chat-wrapper .container-right .input button:active {
+  transform: translateY(5px);
+}/*# sourceMappingURL=index.css.map */
