Izmjenjena boja teksta

--- a/src/index.scss
+++ b/src/index.scss
@@ -277,7 +277,7 @@ body {
             span.timestamp {
               font-size: 0.7em;
               font-family: $font-logo;
-              color: #ffffff;
+              color: #cecece;
             }
 
             span.chat-username {
@@ -286,7 +286,7 @@ body {
               font-size: 1.4em;
               font-family: $font-user;
               font-weight: 500;
-              color: #ffffff;
+              color: #cecece;
             }
 
             &.my-message {
