--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ body {
 * {
   box-sizing: border-box;
   font-family: "Star Jedi", sans-serif;
-  color: #595959;
+  color: #a8a8a8;
 }
 
 /*Login screen design*/
@@ -34,16 +34,16 @@ body {
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
 }
 .login .login-wrapper .logo {
-  font-family: "Unica One", cursive;
-  font-size: 2.5em;
+  font-family: "Star Jedi", cursive;
+  font-size: 1.5em;
   font-weight: 800;
   color: #000000;
 }
 .login .login-wrapper .title {
-  font-family: "Unica One", cursive;
-  font-size: 2em;
+  font-family: "Star Jedi", cursive;
+  font-size: 1em;
   font-weight: 800;
-  color: #fca311;
+  color: #050149;
   margin-bottom: 10px;
 }
 .login .login-wrapper .register-text {
@@ -58,7 +58,7 @@ body {
 .login .login-wrapper form input {
   padding: 10px 10px 1px 10px;
   border: none;
-  border-bottom: 1px solid rgba(235, 235, 235, 0.3215686275);
+  border-bottom: 1px solid rgba(235, 235, 235, 0.1450980392);
   font-size: 1em;
   outline: none;
 }
@@ -73,7 +73,7 @@ body {
 .login .login-wrapper form .error-message {
   font-size: 0.8em;
   font-weight: 600;
-  color: #fca311;
+  color: #050149;
 }
 .login .login-wrapper form .login-button {
   padding: 10px;
@@ -82,7 +82,7 @@ body {
   border-radius: 5px;
   background-color: #000000;
   font-size: 1.5em;
-  font-family: "Unica One", cursive;
+  font-family: "Star Jedi", cursive;
   color: #ffffff;
   font-weight: 600;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
@@ -114,7 +114,7 @@ body {
   width: 30%;
   display: flex;
   flex-direction: column;
-  background-color: #fca311;
+  background-color: #050149;
 }
 .chat .chat-wrapper .sidebar .logo {
   display: flex;
@@ -122,18 +122,18 @@ body {
   height: 10%;
   padding: 10px;
   padding-left: 20px;
-  gap: 10px;
+  gap: 20px;
   align-items: center;
 }
 .chat .chat-wrapper .sidebar .logo .logo-text {
   color: #ffffff;
-  font-family: "Unica One", cursive;
-  font-size: 1.5em;
+  font-family: "Star Jedi", cursive;
+  font-size: 1em;
 }
 .chat .chat-wrapper .sidebar .active-users {
   height: 90%;
   padding: 10px;
-  background-color: #fca311;
+  background-color: #050149;
   gap: 10px;
 }
 .chat .chat-wrapper .sidebar .active-users .users-title {
@@ -143,9 +143,9 @@ body {
   height: 10%;
   padding: 10px;
   color: #ffffff;
-  font-family: "Unica One", cursive;
+  font-family: "Star Jedi", cursive;
   font-size: 1.2em;
-  border-bottom: 1px solid rgba(235, 235, 235, 0.3215686275);
+  border-bottom: 1px solid rgba(235, 235, 235, 0.1450980392);
 }
 .chat .chat-wrapper .sidebar .active-users .users-title .online-circle {
   width: 16px;
@@ -166,7 +166,7 @@ body {
   background-color: rgba(87, 88, 88, 0.5803921569);
 }
 .chat .chat-wrapper .sidebar .active-users .member .username {
-  font-family: "Nanum Pen Script", cursive;
+  font-family: "Star Jedi", cursive;
   color: #ffffff;
   font-size: 1.8em;
 }
@@ -189,7 +189,7 @@ body {
   align-items: center;
 }
 .chat .chat-wrapper .container-right .header .header-title {
-  font-family: "Nanum Pen Script", cursive;
+  font-family: "Star Jedi", cursive;
   font-size: 1.8em;
   color: #000000;
   font-weight: 600;
@@ -202,7 +202,7 @@ body {
   border-radius: 3px;
   font-size: 1em;
   cursor: pointer;
-  font-family: "Unica One", cursive;
+  font-family: "Star Jedi", cursive;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
   width: 80px;
 }
@@ -211,7 +211,7 @@ body {
 }
 .chat .chat-wrapper .container-right .messages {
   height: 80%;
-  background-color: #494949;
+  background-color: rgba(73, 73, 73, 0.3019607843);
   width: 100%;
   padding: 10px;
   overflow-y: auto;
@@ -237,19 +237,21 @@ body {
 }
 .chat .chat-wrapper .container-right .messages ul li span.timestamp {
   font-size: 0.7em;
-  font-family: "Unica One", cursive;
+  font-family: "Star Jedi", cursive;
+  color: #cecece;
 }
 .chat .chat-wrapper .container-right .messages ul li span.chat-username {
   width: -moz-fit-content;
   width: fit-content;
   margin-left: auto;
   font-size: 1.4em;
-  font-family: "Nanum Pen Script", cursive;
+  font-family: "Star Jedi", cursive;
   font-weight: 500;
+  color: #cecece;
 }
 .chat .chat-wrapper .container-right .messages ul li.my-message {
   margin-left: auto;
-  background: #14213d;
+  background: #000000;
   border-radius: 10px 0px 10px 10px;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
@@ -289,7 +291,7 @@ body {
   border-radius: 3px;
   font-size: 1em;
   cursor: pointer;
-  font-family: "Unica One", cursive;
+  font-family: "Star Jedi", cursive;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
   width: 80px;
 }
